alignment issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
     transform: rotate(360deg);
   }
 }
-
+/*
 
 .makeStyles-root-104 {
   flex-grow: 1;
@@ -65,13 +65,20 @@
   max-width: 1000px!important;
 }
 
+.jss77{
+  flex-grow: 1;
+  max-width: 1000px!important;
+}
+
 
 .makeStyles-root-177 {
   flex-grow: 1;
   max-width: 1000px!important;
-}
+}*/
 
 .makeStyles-root-91 > * {
   margin: 8px;
   margin-left: 21px!important;
 }
+
+
